Clean meta data module IOC and tests